objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Custom_Record_Type__c</fullName>
        <description>This field is used to identify whether the record is specific to the IDO or SDO.</description>
        <inlineHelpText>This field is used to identify whether the record is specific to the IDO or SDO.</inlineHelpText>
        <label>Custom Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SDO</fullName>
                </value>
                <value>
                    <fullName>IDO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost__c</fullName>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Cost_Per_Unit__c</fullName>
        <label>Variable Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>